<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:text="@string/main_hello"
        android:textSize="28sp"
        android:textStyle="bold" />

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:iss_auto_cycle="true"
        app:iss_corner_radius="20"
        app:iss_delay="0"
        app:iss_error_image="@color/yellow"
        app:iss_period="3000"
        app:iss_placeholder="@color/grey" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/main_title"
        android:textSize="20sp"
        android:textStyle="bold" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/main_buttonRegister"
                android:textColor="@color/grey"
                android:textSize="24sp" />

            <Button
                android:id="@+id/buttonList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/yellow"
                android:text="@string/main_ButtonList"
                android:textColor="@color/grey"
                android:textSize="24sp" />


        </LinearLayout>


    </ScrollView>


</LinearLayout>